# hersh

./: CMakeLists.txt  LICENSE  README.md  hersh.cpp  hershensh.cpp
.github/workflows/: ci.yml
hersh/: evaluate.test.cpp  hersh.cpp  printer.test.cpp  reader.hpp  reader.test.cpp
include/: evaluate.h  printer.h  reader.h
src/: evaluate.hpp  evaluate.test.cpp  hersh.cpp  hersh.test.cpp  printer.hpp  printer.test.cpp  reader.hpp  reader.test.cpp  tree-sitter-wrapper.hpp
